--- a/nganhang/package.json
+++ b/nganhang/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "next": "15.3.1",
+    "nganhang": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
