--- a/nganhang/package.json
+++ b/nganhang/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/material-nextjs": "^7.1.0",
+    "@mui/x-date-pickers": "^8.5.0",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "next": "15.3.1",
     "nganhang": "file:",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/date-fns": "^2.5.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
